# forensic-swarm-auditor

./: .dockerignore  .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  server.py  test_env.py
audit/report_onself_generated/: final_audit_report.md  final_report.md
audit/rubrics/: FINAL_AUDIT_LOG.json  SOVEREIGN_AUDIT_REPORT.md  master_audit.json  minmax_rubric.json
deploy/docker/: Dockerfile
frontend/: server.py
src/: graph.py  state.py
src/agents/: detective.py  judge.py  justice.py  repo_investigator.py
src/agents/detectives/: __init__.py  docs.py  repo.py  vision.py
src/agents/judges/: Tech_lead.py  __init__.py  defense.py  lead.py  prosecutor.py
src/agents/justice/: __init__.py  chief_justice.py
src/config/: rubric.json
src/core/: config,py  context_builder.py  dispatcher.py  engine.py  graph.py  state.py
src/infrastructure/: observability.py  sandbox.py
src/nodes/: aggregator.py  detective.py  judges.py  report_generator.py
src/tools/: ast_parser.py  repo_tools.py
src/utils/: pdf_engine.py
