[project]
name = "forensic-swarm-auditor"
version = "1.0.0"
description = "High-performance multi-agent forensic auditor"
# ðŸ Explicitly targeting modern Python
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0,<0.3.0",    # ðŸ•¸ï¸ Stable orchestration
    "langchain-openai~=0.1.0",    # ðŸ¤– LLM integration
    "docling>=2.0.0,<3.0.0",      # ðŸ“„ PDF structural parsing
    "pydantic>=2.7.0,<3.0.0",     # ðŸ›¡ï¸ Fast data validation
    "python-dotenv>=1.0.1",       # ðŸ”‘ Secret management
]

[tool.uv]
# This tells uv to manage the lockfile automatically
package = true